fixing animation heart on mobiles

--- a/themes/tascalacarambola/assets/scss/_logo.scss
+++ b/themes/tascalacarambola/assets/scss/_logo.scss
@@ -29,9 +29,6 @@
     }
 
     @media (prefers-reduced-motion: reduce) {
-        &__cursor {
-            animation: none;
-        }
     }
 }
 
